# apps/api/src/utils/isQuizAccessAllowed.ts
@@ -2,17 +2,17 @@ export const isQuizAccessAllowed = (
   attempts: number | null,
   attemptsLimit: number | null,
   lastUpdate: string | null,
-  quizCooldown: number | null,
+  quizCooldownInHours: number | null,
 ): boolean => {
   if (attemptsLimit === null || attempts === null) {
     return true;
   }
   if (attempts % attemptsLimit !== 0) return true;
 
-  if (lastUpdate && quizCooldown) {
+  if (lastUpdate && quizCooldownInHours) {
     const lastUpdateDate = new Date(lastUpdate);
 
-    const cooldownEnd = new Date(lastUpdateDate.getTime() + quizCooldown * 60 * 60 * 1000);
+    const cooldownEnd = new Date(lastUpdateDate.getTime() + quizCooldownInHours * 60 * 60 * 1000);
     const now = new Date();
 
     if (now < cooldownEnd) {
